docs/api/qiskit/0.37/qiskit.circuit.library.SXGate.mdx
---
title: SXGate
description: API reference for qiskit.circuit.library.SXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SXGate
---

# SXGate

<Class id="qiskit.circuit.library.SXGate" github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/standard_gates/sx.py" signature="SXGate(label=None)">
  Bases: [`qiskit.circuit.gate.Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  The single-qubit Sqrt(X) gate ($\sqrt{X}$).

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`sx()`](qiskit.circuit.QuantumCircuit#sx "qiskit.circuit.QuantumCircuit.sx") method.

  **Matrix Representation:**

  $$
  \begin{split}\sqrt{X} = \frac{1}{2} \begin{pmatrix}
          1 + i & 1 - i \\
          1 - i & 1 + i
      \end{pmatrix}\end{split}
  $$

  **Circuit symbol:**

  ```python
       ┌────┐
  q_0: ┤ √X ├
       └────┘
  ```

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RX(\pi/2)$ and $\sqrt{X}$.

    $$
    \begin{split}RX(\pi/2) = \frac{1}{\sqrt{2}} \begin{pmatrix}
                1 & -i \\
                -i & 1
              \end{pmatrix}
            = e^{-i pi/4} \sqrt{X}\end{split}
    $$
  </Admonition>

  Create new SX gate.

  ## Methods Defined Here

  ### control

  <Function id="qiskit.circuit.library.SXGate.control" signature="SXGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (multi-)controlled-SX gate.

    One control returns a CSX gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.SXGate.inverse" signature="SXGate.inverse()">
    Return inverse SX gate (i.e. SXdg).
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.SXGate.condition_bits" name="condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.SXGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.SXGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.SXGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.SXGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.SXGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.SXGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.SXGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.SXGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.SXGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

